[gd_scene load_steps=9 format=2]

[ext_resource path="res://Rocky Roads/Backgrounds/desert_a.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=2]
[ext_resource path="res://MusicAndSounds/Music/POL-king-of-coins-short.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.121569, 0.0705882, 0.811765, 0.576471 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.121569, 0.0705882, 0.811765, 0.576471 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.121569, 0.0705882, 0.811765, 0.576471 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.121569, 0.0705882, 0.811765, 0.576471 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.121569, 0.0705882, 0.811765, 0.576471 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DesertA" type="Sprite" parent="."]
position = Vector2( 513, 300.5 )
scale = Vector2( 3.99219, 4.67969 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="."]
margin_left = 618.0
margin_top = 128.0
margin_right = 946.0
margin_bottom = 192.0
custom_styles/focus = SubResource( 1 )
text = "Mover hacía la derecha"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightLabel" type="Label" parent="Right"]
margin_left = 32.0
margin_top = -64.0
margin_right = 306.0
margin_bottom = -1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Felft" type="Button" parent="."]
margin_left = 139.0
margin_top = 128.0
margin_right = 467.0
margin_bottom = 192.0
custom_styles/focus = SubResource( 2 )
text = "Mover hacía la izquierda"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftLabel" type="Label" parent="Felft"]
margin_left = 31.0
margin_top = -67.0
margin_right = 305.0
margin_bottom = -4.0
text = "

"
align = 1
valign = 1

[node name="Pause" type="Button" parent="."]
margin_left = 144.0
margin_top = 308.0
margin_right = 472.0
margin_bottom = 372.0
custom_styles/focus = SubResource( 3 )
text = "Pausar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="Pause"]
margin_left = 23.0
margin_top = -63.0
margin_right = 297.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="Button" parent="."]
margin_left = 618.0
margin_top = 303.0
margin_right = 946.0
margin_bottom = 367.0
custom_styles/focus = SubResource( 4 )
text = "Saltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpLabel" type="Label" parent="Jump"]
margin_left = 27.0
margin_top = -58.0
margin_right = 301.0
margin_bottom = 5.0
text = "
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="."]
margin_left = 316.0
margin_top = 479.0
margin_right = 741.0
margin_bottom = 554.0
custom_styles/focus = SubResource( 5 )
text = "Regresar al menú"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Felft" to="." method="_on_Felft_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Jump" to="." method="_on_Jump_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
